bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_on_struct.rs
use macbat::Error;
#[derive(Error)]
struct S {
    a: u8,
}
fn main() {}
